improve(navbar): use old logo and same height as cockpit

--- a/client/client/scripts/navigation/directives/cam-tasklist-navigation.html
+++ b/client/client/scripts/navigation/directives/cam-tasklist-navigation.html
@@ -14,9 +14,11 @@
     </button>
 
     <a class="navbar-brand"
+       title="{{ 'APP_VENDOR' | translate }} {{ 'TASKLIST_APP' | translate }}"
        ng-href="{{ 'tasklistbase://' | uri }}#{{ (!username ? '/login' : '') }}">
-       <span class="vendor-icon"></span>
+<!--
        {{ 'APP_VENDOR' | translate }} {{ 'TASKLIST_APP' | translate }}
+-->
     </a>
   </div>
 
