feat(filter): add dialog to create, edit and delete filters

--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -22,7 +22,7 @@
          cam-if-logged-in>
       <div class="row controls">
         <div class="cols col-sm-2 task-filters"
-             ng-controller="filterCreateCtrl">
+             ng-controller="filterFormCtrl">
           <div class="inner">
             <h5>
               <a href
