--- a/client/client/scripts/task/directives/cam-tasklist-task-diagram.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task-diagram.html
@@ -1,1 +1,7 @@
-papi papo
+{{ (process.name || process.key) }} {{ loading }} {{ rendering }}
+<div ng-if="loading"
+     class="loader">
+  <i class="animate-spin glyphicon glyphicon-refresh"></i>
+  {{ 'LOADING' | translate }}
+</div>
+<div class="diagram-holder"></div>
