--- a/client/client/scripts/task/directives/cam-tasklist-task-form.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task-form.html
@@ -4,5 +4,6 @@
   <button class="btn btn-primary"
           type="submit"
           ng-click="completeTask()"
+          ng-disabled="$invalid"
           translate="COMPLETE">Complete</button>
 </div>
