--- a/client/client/scripts/filter/directives/cam-tasklist-tasks.html
+++ b/client/client/scripts/filter/directives/cam-tasklist-tasks.html
@@ -60,28 +60,43 @@
                    ng-change="batchOperationSelect()" />
           </li>
 
-          <li data-toggle="tooltip"
-              data-placement="top"
-              title="{{ 'FOLLOW_UP_DATE' | translate }}"
+          <li cam-form-inline-field
               class="followup-date"
-              ng-class="(task.followUp < now ? 'overdue' : '')">
-            <span class="glyphicon glyphicon-bell"></span>
-            <span cam-form-inline-field
-                  value="task.followUp">
-              <span am-time-ago="task.followUp">{{ task.followUp }}</span>
-            </span>
+              ng-class="{overdue: task.followUp && (task.followUp  < now)}"
+              type="datetime"
+              change="saveFollowUpDate(this)"
+              value="task.followUp">
+
+            <span tooltip-placement="top"
+                  tooltip-append-to-body="true"
+                  tooltip="{{ 'FOLLOW_UP_DATE' | translate }}"
+                  class="glyphicon glyphicon-bell"></span>
+
+            <span ng-if="varValue"
+                  am-time-ago="varValue">{{ varValue }}</span>
+
+            <a href
+               ng-if="!varValue"
+               translate="SET">Set</a>
           </li>
 
-          <li data-toggle="tooltip"
-              data-placement="top"
-              title="{{ 'DUE_DATE' | translate }}"
+          <li cam-form-inline-field
               class="due-date"
-              ng-class="(task.due < now ? 'overdue' : '')">
-            <span class="glyphicon glyphicon-calendar"></span>
-            <span cam-form-inline-field
-                  value="task.due">
-              <span am-time-ago="task.due">{{ task.due }}</span>
-            </span>
+              ng-class="{overdue: task.due  && (task.due < now)}"
+              type="datetime"
+              change="saveDueDate(this)"
+              value="task.due">
+            <span tooltip-placement="top"
+                  tooltip-append-to-body="true"
+                  tooltip="{{ 'DUE_DATE' | translate }}"
+                  class="glyphicon glyphicon-calendar"></span>
+
+            <span ng-if="varValue"
+                  am-time-ago="varValue">{{ varValue }}</span>
+
+            <a href
+               ng-if="!varValue"
+               translate="SET">Set</a>
           </li>
 
           <!--
@@ -89,7 +104,7 @@
               data-placement="top"
               title="{{ 'ASSIGNEE' | translate }}"
               class="assignee">
-            <span class="glyphicon glyphicon-user"></span>
+            <span saveDueDate="glyphicon glyphicon-user"></span>
             <span cam-form-inline-field value="task.assignee">
               {{ task.assignee }}
             </span>
